--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.1",
