--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "bulma": "^0.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
     "redux": "^4.2.0"
   },
   "devDependencies": {
