--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "sqlite3": "^5.0.4"
   },
